--- a/clusterização/KMeans/clusterizacao_clientes.ipynb
+++ b/clusterização/KMeans/clusterizacao_clientes.ipynb
@@ -3641,7 +3641,7 @@
     "\n",
     "#### Perfis Identificados (Clusters)\n",
     "\n",
-    "#### Cluster 1 – Inovadores Prontos\n",
+    "#### Cluster 1 – Premium Inovador\n",
     "- **Inovação média**: 8.0\n",
     "- **Faturamento mais alto**\n",
     "- **Base predominante: Vitória**\n",
@@ -3653,7 +3653,7 @@
     "\n",
     "---\n",
     "\n",
-    "#### Cluster 0 – Tradicionais Resistentes\n",
+    "#### Cluster 0 – Tradicional Conservador\n",
     "- **Inovação média**: 1.5\n",
     "- Faturamento alto\n",
     "- Predominância no **Rio de Janeiro**\n",
@@ -3665,7 +3665,7 @@
     "\n",
     "---\n",
     "\n",
-    "#### Cluster 2 – Zona de Transição\n",
+    "#### Cluster 2 – Expansivo Econômico\n",
     "- **Inovação média**: 5.1\n",
     "- Perfil intermediário\n",
     "- Predominância em **São Paulo**\n",
